[project]
name = "photo-director"
version = "0.1.0"
description = "LLM-directed RAW photo editing MVP using RawPy and OpenRouter."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "rawpy>=0.19",
  "requests>=2.31",
  "opencv-python-headless>=4.9",
  "tqdm>=4.66",
]

[project.optional-dependencies]
exif = ["exifread>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
photo-director = "photo_director.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
